@@ -131,6 +131,7 @@ test-suite libtorrent :
 	[ run test_storage.cpp ]
 	[ run test_session.cpp ]
 	[ run test_read_piece.cpp ]
+	[ run test_remove_torrent.cpp ]
 
 	[ run test_file.cpp ]
 	[ run test_fast_extension.cpp ]
