@@ -10,6 +10,7 @@ test_programs = \
   test_file                  \
   test_privacy               \
   test_priority              \
+  test_remove_torrent        \
   test_auto_unchoke          \
   test_checking              \
   test_fast_extension        \
@@ -197,6 +198,7 @@ test_stat_cache_SOURCES = test_stat_cache.cpp
 test_file_SOURCES = test_file.cpp
 test_privacy_SOURCES = test_privacy.cpp
 test_priority_SOURCES = test_priority.cpp
+test_remove_torrent_SOURCES = test_remove_torrent.cpp
 test_auto_unchoke_SOURCES = test_auto_unchoke.cpp
 test_checking_SOURCES = test_checking.cpp
 test_enum_net_SOURCES = test_enum_net.cpp
