@@ -1,3 +1,4 @@
+	* fix memory leak in the disk cache
 	* forward declaring libtorrent types is discouraged. a new fwd.hpp header is provided
 
 1.1.3 release
